<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yang.login.LoginActivity">

    <TextView
        android:id="@+id/Login_TextView_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_account"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/Login_EditText_Account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Login_edittext_account"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/Login_TextView_Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/Login_TextView_Account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Login_TextView_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_psw"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_TextView_Account"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/Login_EditText_psw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Login_edittext_psw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/Login_TextView_psw"
        app:layout_constraintTop_toBottomOf="@+id/Login_EditText_Account"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/Login_SignIn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_button_SignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_EditText_psw"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/Login_SignUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_button_SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login_SignIn_btn"
        app:layout_constraintStart_toStartOf="@+id/Login_SignIn_btn"
        app:layout_constraintTop_toBottomOf="@+id/Login_SignIn_btn"
        app:layout_constraintVertical_bias="0.097" />

</androidx.constraintlayout.widget.ConstraintLayout>